--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Aug 16 16:41:33 CST 2017
+#Wed Aug 16 22:24:35 CST 2017
+ndk.dir=C\:\\Users\\spff\\AppData\\Local\\Android\\Sdk\\ndk-bundle
 sdk.dir=C\:\\Users\\spff\\AppData\\Local\\Android\\Sdk
